--- a/src/layout/sidebar.astro
+++ b/src/layout/sidebar.astro
@@ -1,26 +1,36 @@
 ---
+import { getCollection } from "astro:content";
+import { string } from "astro:schema";
+import { textChangeRangeIsUnchanged } from "typescript";
+
 const { section } = Astro.props
 
 class SidebarItem {
 
-    chapter : number;
-    id : number;
+    chapter : string;
+    section : string;
+    textSection : string;
     name : string;
-    isSection : boolean;
+    isChapter : boolean;
     startsActive : boolean;
 
     classList : string;
+    url : string;
+    pushUrl : string;
 
-    constructor(chapter : number, id : number, name : string, isSection : boolean, startsActive : boolean) {
+    constructor(chapter : string, section : string, name : string, isChapter : boolean, startsActive : boolean) {
         this.chapter = chapter;
-        this.id = id;
+        this.section = section;
+        this.textSection = section.replace("-",".")
         this.name = name;
-        this.isSection = isSection;
+        this.isChapter = isChapter;
         this.startsActive = startsActive;
 
         this.classList = "sidebar-item"
+        this.pushUrl = `/${chapter}/${name.toLowerCase().replaceAll(" ","-")}`
+        this.url = "/partials" + this.pushUrl
 
-        if (isSection) {
+        if (!this.isChapter) {
             this.classList += " section"
         }
 
@@ -29,43 +39,32 @@ class SidebarItem {
         }
     }
 }
+
 const items : SidebarItem[] = []
-const paths =  Object.entries(import.meta.glob("../../content/**/*.mdx", { eager: true })).map((entry : [string, any]) => {
+const paths = (await getCollection('textbook')).map((page) => {
     
-    let path = entry[0]
-    let chapterMatch = path.match(/\/([0-9]+)\/[0-9\.]+.md/)
-    let idMatch = path.match(/\/([0-9\.]+).md/)
+    let chapterName = String(page.data.section).substring(0,1)
+    let sectionName = String(page.data.section)
+    let isChapter = !String(sectionName).includes(".")
 
-    if (chapterMatch && idMatch) {
-        let chapter = chapterMatch[1]
-        let id = idMatch[1]
-        let isSection = false
-
-        if (id.includes(".")) {
-            isSection = true
-        }
-
-        items.push(new SidebarItem(Number(chapter),Number(id),entry[1].frontmatter.title,isSection, Number(id) == Number(section)))
-    }
+    items.push(new SidebarItem(chapterName, sectionName, page.data.title, isChapter, sectionName === section))
 })
-
 
 items.sort((a : SidebarItem, b : SidebarItem) => {
     if (a.chapter != b.chapter) {
-        return a.chapter - b.chapter
-    } else if (a.isSection || a.isSection) {
-        return Number(b.isSection) - Number(a.isSection)
+        return Number(a.chapter) - Number(b.chapter)
+    } else if (a.isChapter || a.isChapter) {
+        return Number(a.isChapter) - Number(b.isChapter)
     } else {
-        return a.id - b.id
+        return Number(a.textSection) - Number(b.textSection)
     }
 })
-console.log(items)
 ---
 {items.map((item : SidebarItem) => 
     <div class={item.classList}
-        hx-get=`/partials/${item.id}` hx-on="click" hx-target="#content"
+        hx-get={item.url} hx-on="click" hx-target="#content" hx-push-url={item.pushUrl}
     >
-        <div class="section">{String(item.id)}</div>
+        <div class="section">{item.textSection}</div>
         <div class="name">{item.name}</div>
     </div>
 )}
