--- a/src/layout/layout.astro
+++ b/src/layout/layout.astro
@@ -1,9 +1,11 @@
 ---
 import Logo from "../assets/images/bee.png"
+import Page from "./page.astro"
+import Pagemap from "./pagemap.astro"
 import Search from "./search.astro"
 import Sidebar from "./sidebar.astro"
 
-const { section } = Astro.props
+const { slug } = Astro.props
 ---
 
 <!doctype html>
@@ -30,13 +32,13 @@ const { section } = Astro.props
 		</div>
 		<div id="main">
 			<div id="sidebar">
-				<Sidebar section={section}></Sidebar>
+				<Sidebar slug={slug}></Sidebar>
 			</div>
 			<div id="content">
-				<slot />
+				<Page slug={slug} />
 			</div>
-			<div id="articlemap">
-
+			<div id="pagemap">
+				<Pagemap slug={slug}>
 			</div>
 		</div>
 	</body>
@@ -58,6 +60,7 @@ const { section } = Astro.props
 	body {
 		display: flex;
 		flex-direction: column;
+		scroll-behavior: smooth;
 
 		margin: 0;
 		width: 100%;
@@ -175,7 +178,7 @@ const { section } = Astro.props
 		}
 	}
 
-	div#articlemap {
+	div#pagemap {
 		flex-grow: 0;
 		min-width: 18vw;
 		max-width: 18vw;
@@ -183,6 +186,18 @@ const { section } = Astro.props
 		padding: 1rem;
 
 		background-color: var(--darker);
+
+		div.pagemap-title {
+			color: rgb(107, 106, 104);
+		}
+
+		div.pagemap-heading {
+			font-size: 0.925rem;
+			margin-left: 0.5rem;
+			margin-top: 0.25rem;
+
+			cursor: pointer;
+		}
 	}
 
 	div#content {
@@ -214,6 +229,11 @@ const { section } = Astro.props
 		color: white;
 
 		line-height: 1.6;
+	}
+
+	h3, h4 {
+		font-size: 1.25rem;
+		margin: 0.5rem 0 0 0;
 	}
 
 	p, li, a {
@@ -258,13 +278,17 @@ const { section } = Astro.props
 		border: none;
 
 		span.line {
-			display: block;
-			line-height: 0.3;
-			padding: 1px;
+			display: inline-block;
+			border-radius: 0.2rem;
+			line-height: 1;
+			padding: 2.5px;
 			width: 100%;
+
+			outline: none;
 		}
 
 		span.line:hover {
+			outline: 1px solid gray;
 		}
 	}
 
@@ -294,6 +318,8 @@ const { section } = Astro.props
 			font-size: 2rem;
 			line-height: 1.2;
 			margin: 0;
+
+			padding-bottom: 1rem;
 
 			text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.7);
 		}
