--- a/src/layout/page.astro
+++ b/src/layout/page.astro
@@ -10,7 +10,7 @@ if (!entry) {
 const { Content, headings } = await render(entry)
 ---
 <div class="article-title">
-    <h1 class="section">{entry.data.section}</h1>
+    <h1 class="section" style={Math.floor(Number(entry.data.section)) == 0 ? "display:none" : ""}>{entry.data.section}</h1>
     <h1 class="title">{entry.data.title}</h1>
 </div>
 <Content />
