--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../layout/layout.astro";
+import Layout from "../components/server/layout.astro";
 ---
 
 <Layout slug="index">
