--- a/src/components/server/sidebar.astro
+++ b/src/components/server/sidebar.astro
@@ -7,7 +7,7 @@ import SidebarComponent from "../client/sidebar.svelte"
 import { SidebarGroup, SidebarItem } from "../lib.ts"
 import type { loadRenderers } from "astro:container";
 
-const { section } = Astro.props
+const { map, section } = Astro.props
 
 const groups : Map<String, SidebarGroup> = new Map();
 const items : SidebarItem[] = []
