Massively improved mobile experience

--- a/src/components/server/layout.astro
+++ b/src/components/server/layout.astro
@@ -1,5 +1,7 @@
 ---
 import Logo from "../../assets/images/bee.png"
+import Hamburger from "../../assets/images/hamburger.svg"
+
 import Page from "./page.astro"
 import Pagemap from "../client/pagemap.svelte"
 import Search from "./search.astro"
@@ -24,16 +26,15 @@ const { slug } = Astro.props;
 	</head>
 	<body>
 		<div id="header">
+			<img id="hamburger" src={Hamburger.src}/>
 			<div id="title">
-				<img src={Logo.src}>
+				<img id="logo" src={Logo.src}>
 				<h1>CS61B Textbook</h1>
 			</div>
 			<Search></Search>
 		</div>
 		<div id="main">
-			<div id="sidebar">
-				<Sidebar slug={slug}></Sidebar>
-			</div>
+			<Sidebar slug={slug}></Sidebar>
 			<div id="content">
 				<Page slug={slug} />
 			</div>
@@ -49,21 +50,25 @@ const { slug } = Astro.props;
 	@media only screen and (max-width: 740px) {
 
 		div#header {
+			justify-content: left !important;
 			background-color: var(--darker) !important;
+
+			padding-left: 1rem !important;
+			padding-right: 1rem !important;
+
+			gap: 1rem !important
 		}
 
-		div#sidebar {
-			width: 75vw;
-			max-width: 75vw !important;
-			height: 100%;
-			position: fixed;
-
-			transform: translateX(-100%);
-			z-index: 2;
+		img#logo {
+			display: none !important;
 		}
 
 		div#pagemap {
 			display: none;
+		}
+
+		img#hamburger {
+			display: block !important;
 		}
 	}
 
@@ -134,6 +139,10 @@ const { slug } = Astro.props;
 		border-bottom: 0.5px solid var(--border);
 	}
 
+	img#hamburger {
+		display: none;
+	}
+
 	div#main {
 		container-type: size;
 
@@ -141,116 +150,6 @@ const { slug } = Astro.props;
 		justify-content: stretch;
 		flex-direction: row;
 		flex-grow: 1;
-	}
-
-	div#sidebar {
-		flex-grow: 0;
-		min-width: 18vw;
-		max-width: 18vw;
-
-		overflow-x: hidden;
-		overflow-y: scroll;
-
-		padding: 1rem;
-
-		background-color: var(--darker);
-		border-right: 0.5px solid var(--border);
-
-		div.sidebar-group {
-
-			div.sidebar-chapter {
-				display: flex;
-				flex-direction: row;
-				justify-content: space-between;
-				align-items: center;
-
-				img {
-					width: 1rem;
-					transition: transform 75ms, background-color 75ms;
-
-					border-radius: 1rem;2
-					padding: 0.2rem;
-				}
-
-				img:hover {
-					background-color: rgba(255, 255, 255, 0.073);
-				}
-			}
-
-			.subitems-container {
-				display: grid;
-				grid-template-rows: 0fr;
-
-				transition: grid-template-rows 150ms ease-in-out;
-			}
-
-			.subitems-container.open {
-				grid-template-rows: 1fr;
-			}
-
-			.subitems {
-				overflow: hidden;
-			}
-		}
-
-		div.sidebar-group.open {
-			grid-template-rows: 1fr 0fr;
-		}
-
-		div.sidebar-title {
-			color: rgb(107, 106, 104);
-		}
-
-		div.sidebar-item {
-
-			display: flex;
-			font-size: 0.925rem;
-			flex-direction: row;
-
-			gap: 0.75rem;
-
-			margin-top: 0.5rem;
-			margin-bottom: 0.5rem;
-
-			cursor: pointer;
-			user-select: none;
-			transition: margin 100ms;
-
-			div.section {
-				color: rgb(96, 96, 96);
-			}
-
-			div.name {
-				color: white;
-				transition: color 300ms;
-			}
-		}
-
-		div.sidebar-item:hover {
-			margin-left: 0.5rem;
-
-			div.name {
-				color: #ffe4a5 !important;
-			}
-		}
-
-		div.sidebar-item.active {
-			margin-left: 1rem !important;
-
-			div.name {
-				color: #d79921 !important;
-			}
-		}
-
-		div.sidebar-item.section {
-			padding-left: 2rem;
-			margin-top: 0rem !important;
-			margin-bottom: 0.25rem !important;
-
-			div.name {
-				color: rgb(207, 207, 207);
-			}
-		}
 	}
 
 	div#pagemap {
@@ -305,6 +204,29 @@ const { slug } = Astro.props;
 </style>
 
 <style is:global>
+
+	@media only screen and (max-width: 740px) {
+		div#search {
+			display: none !important;
+		}
+
+		div#sidebar {
+			width: 75vw;
+			max-width: 75vw !important;
+			height: 100%;
+			position: fixed;
+
+			transform: translateX(-100%);
+			z-index: 2;
+
+			transition: transform 150ms ease-in-out;
+		}
+		
+		div#sidebar.open {
+			transform: translateX(0) !important;
+		}
+	}
+
 
 	h1, h2, p, li, a, div {
 		font-family: Inter;
@@ -420,6 +342,117 @@ const { slug } = Astro.props;
 		border-radius: 0.5rem;
 
 		width: 20vw;
+		display: block;
+	}
+
+	div#sidebar {
+		flex-grow: 0;
+		min-width: 18vw;
+		max-width: 18vw;
+
+		overflow-x: hidden;
+		overflow-y: scroll;
+
+		padding: 1rem;
+
+		background-color: var(--darker);
+		border-right: 0.5px solid var(--border);
+
+		div.sidebar-group {
+
+			div.sidebar-chapter {
+				display: flex;
+				flex-direction: row;
+				justify-content: space-between;
+				align-items: center;
+
+				img {
+					width: 1rem;
+					transition: transform 75ms, background-color 75ms;
+
+					border-radius: 1rem;2
+					padding: 0.2rem;
+				}
+
+				img:hover {
+					background-color: rgba(255, 255, 255, 0.073);
+				}
+			}
+
+			.subitems-container {
+				display: grid;
+				grid-template-rows: 0fr;
+
+				transition: grid-template-rows 150ms ease-in-out;
+			}
+
+			.subitems-container.open {
+				grid-template-rows: 1fr;
+			}
+
+			.subitems {
+				overflow: hidden;
+			}
+		}
+
+		div.sidebar-group.open {
+			grid-template-rows: 1fr 0fr;
+		}
+
+		div.sidebar-title {
+			color: rgb(107, 106, 104);
+		}
+
+		div.sidebar-item {
+
+			display: flex;
+			font-size: 0.925rem;
+			flex-direction: row;
+
+			gap: 0.75rem;
+
+			margin-top: 0.5rem;
+			margin-bottom: 0.5rem;
+
+			cursor: pointer;
+			user-select: none;
+			transition: margin 100ms;
+
+			div.section {
+				color: rgb(96, 96, 96);
+			}
+
+			div.name {
+				color: white;
+				transition: color 300ms;
+			}
+		}
+
+		div.sidebar-item:hover {
+			margin-left: 0.5rem;
+
+			div.name {
+				color: #ffe4a5 !important;
+			}
+		}
+
+		div.sidebar-item.active {
+			margin-left: 1rem !important;
+
+			div.name {
+				color: #d79921 !important;
+			}
+		}
+
+		div.sidebar-item.section {
+			padding-left: 2rem;
+			margin-top: 0rem !important;
+			margin-bottom: 0.25rem !important;
+
+			div.name {
+				color: rgb(207, 207, 207);
+			}
+		}
 	}
 
 	input {
