--- a/src/components/server/layout.astro
+++ b/src/components/server/layout.astro
@@ -28,7 +28,7 @@ const { slug } = Astro.props;
 		<Header />
 		<div id="main">
 			<Sidebar slug={slug}></Sidebar>
-			<div id="content">
+			<div id="content"  class="container">
 				<Page slug={slug} />
 			</div>
 			<Pagemap client:load />
@@ -54,7 +54,9 @@ const { slug } = Astro.props;
 		z-index: 1;
 
 		background-color: light-dark(var(--foreground-light), var(--foreground-dark));
-		box-shadow: 2px 0px 15px rgba(0, 0, 0, 0.454);
+		border-left: 0.5px solid light-dark(var(--border-light), var(--border-dark));
+		border-right: 0.5px solid light-dark(var(--border-light), var(--border-dark));
+		box-shadow: 2px 0px 15px light-dark(var(--shadow-light), var(--shadow-dark));
 
 		padding-left: 5vw;
 		padding-right: 5vw;
@@ -64,7 +66,7 @@ const { slug } = Astro.props;
 		flex-grow: 1;
 
 		opacity: 1;
-		transition: opacity 100ms ease-in-out;
+		transition: background-color var(--transition-time) ease-in-out, opacity 100ms ease-in-out;
 
 		img {
 			border-radius: 0.4rem;
@@ -115,9 +117,17 @@ const { slug } = Astro.props;
 		color: light-dark(var(--links-light), var(--links-dark))
 	}
 
+	p, a, div, input, h1, h2, h3, h4, h5 {
+		transition: color 0.75s;
+	}
+
 	div {
 		scrollbar-width: 0.25rem;
 		scrollbar-color: rgba(255, 255, 255, 0.394) transparent;
+	}
+
+	svg {
+		color: light-dark(var(--text-light), var(--text-dark))
 	}
 
 	code {
@@ -134,6 +144,10 @@ const { slug } = Astro.props;
 		padding-right: 0.3rem;
 
 		white-space: nowrap;
+	}
+
+	div.container {
+		transition: background-color var(--transition-time) ease-in-out, border var(--transition-time) ease-in-out;
 	}
 
 	.astro-code {
@@ -186,7 +200,7 @@ const { slug } = Astro.props;
 
 			margin: 0;
 
-			box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.403);
+			box-shadow: 2px 2px 4px light-dark(var(--shadow-light), var(--shadow-dark))
 		}
 
 		h1.title {
@@ -196,7 +210,7 @@ const { slug } = Astro.props;
 
 			padding-bottom: 0.5rem;
 
-			text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.7);
+			text-shadow: 3px 3px 4px light-dark(var(--shadow-light), var(--shadow-dark))
 		}
 	}
 
